--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">TheMovieDB</string>
-    <string name="hello_what_do_you_want_to_watch">Hello, what do you want to watch?</string>
+    <string name="hello_what_do_you_want_to_watch">Olá, o que você gostaria de assitir?</string>
     <string name="em_cartaz">Em cartaz</string>
     <string name="ver_tudo">Ver tudo</string>
     <string name="populares">Populares</string>
     <string name="melhores_avaliados">Melhores Avaliados</string>
     <string name="em_breve">Em breve</string>
+    <string name="assista_agora">Assista agora</string>
+    <string name="g_neros">Gêneros:</string>
+    <string name="lan_amento">Lançamento:</string>
 </resources>
